Fix login form input styles for autofill and icon overlap

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,13 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
+/* Fix for Chrome Autofill in Dark Mode */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px #333 inset !important;
+    -webkit-text-fill-color: white !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
